# project-boilerplate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  Makefile  README.md  README_UI.md  backend.Dockerfile  docker-compose.yml  eval.py  evaluation.py  evaluation_results.json  frontend.Dockerfile  main.py  nginx.conf  pyproject.toml  pytest.ini  questions.txt  requirements.txt  sample_ground_truth.json  sample_predictions.json  test.py  test_pdf_processing.py  test_sample.txt
app/: main.py  test_api.py
app/api/: accuracy_routes.py  routes.py
app/core/: config.py  logging_config.py  models.py
app/frontend/: Dockerfile  package-lock.json  package.json
app/models/: extraction.py  shipment.py
app/services/: document_processor.py  excel_processor.py  form_filler.py  llm_service.py  prompts.py  storage_service.py
app/static/: index.html
app/templates/: index.html
app/utils/: accuracy_calculator.py  csv_utils.py  excel_utils.py  pdf_utils.py  text_utils.py  xlsx_utils.py
eval/: evaluation.py
eval/eval_sample_basic/: ground_truth.json  predictions.json
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/app/: page.tsx
tests/: conftest.py  test_accuracy_calculator.py  test_accuracy_routes.py  test_api_routes.py  test_document_processor.py  test_excel_utils.py  test_llm_service.py  test_pdf_utils.py  test_routes.py  test_storage_service.py
ui/: Dockerfile  package-lock.json
web/: Dockerfile  package-lock.json  package.json
(+47 files in other folders)
